# tmuxgen

./: Cargo.toml  LICENSE  README.md
src/: args.rs  constants.rs  main.rs
src/config/: mod.rs
