[package]
name = "tmuxgen"
description = "CLI that allows you to create predefined tmux sessions for your various projects."
version = "0.0.0"
edition = "2021"
authors = ["whutchinson98"]
include = ["src/**/*.rs"]
categories = ["command-line-utilities"]
homepage = "https://github.com/whutchinson98/tmuxgen"
repository = "https://github.com/whutchinson98/tmuxgen"
license = "MIT"
readme = "README.md"
keywords = ["cli", "command", "command-line", "tool", "tmux"]

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
